2008-07-12  Jie Zhang  <jie.zhang@analog.com>

	Revert
	2008-07-12  Jie Zhang  <jie.zhang@analog.com>
	* elf.c (_bfd_elf_map_sections_to_segments): Don't put
	executable sections into the same segment with other
	read only sections if --sep-code.
	* elf32-bfin.c (elf32_bfin_code_in_l1): New variable.
	(elf32_bfin_data_in_l1): New variable.
	(elf32_bfin_final_write_processing): New.
	(elf32_bfin_special_sections[]): New.
	(elf_backend_final_write_processing): Define.
	(elf_backend_special_sections): Define.

2008-07-12  Jie Zhang  <jie.zhang@analog.com>

	* elf.c (_bfd_elf_map_sections_to_segments): Don't put
	executable sections into the same segment with other
	read only sections if --sep-code.
	* elf32-bfin.c (elf32_bfin_code_in_l1): New variable.
	(elf32_bfin_data_in_l1): New variable.
	(elf32_bfin_final_write_processing): New.
	(elf32_bfin_special_sections[]): New.
	(elf_backend_final_write_processing): Define.
	(elf_backend_special_sections): Define.

2008-07-11  Andreas Schwab  <schwab@suse.de>

	* dwarf2.c (read_section): Take pointer to bfd_size_type instead
	of unsigned long as last parameter.
	(struct dwarf2_debug): Define dwarf_abbrev_size, dwarf_line_size,
	dwarf_str_size and dwarf_ranges_size as bfd_size_type instead of
	unsigned long.

2008-07-10  Richard Sandiford  <rdsandiford@googlemail.com>

	* elfxx-mips.c (mips_elf_calculate_relocation): Calculate GP and GP0
	for all relocation types.  Allow any type of relocation to refer to
	__gnu_local_gp.

2008-07-10  Richard Sandiford  <rdsandiford@googlemail.com>

	* elfxx-mips.c (mips_elf_check_mips16_stubs): Use ELF_ST_IS_MIPS16.
	(mips_elf_calculate_relocation): Likewise.
	(_bfd_mips_elf_add_symbol_hook): Likewise.
	(_bfd_mips_elf_finish_dynamic_symbol): Likewise.
	(_bfd_mips_vxworks_finish_dynamic_symbol): Likewise.

2008-07-10  Andreas Schwab  <schwab@suse.de>

	* elfxx-mips.c (_bfd_mips_elf_section_from_shdr): Add missing
	paren.

2008-07-09  Craig Silverstein  <csilvers@google.com>
